--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.18.3",
     "cookies-parser": "^1.2.0",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.7.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.42.0"
   }
 }
